added changes; accounts.html,beans.jpg,corn.jpg,css/bootsrap-5.3.3/css/styles.css,groundnuts.jpg,productdetails.html,rice.jpg,soyabeans.jpg,userslist.html and wheat.jpg

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css//bootstrap-5.3.3/css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>KBL Dashboard</title>
+    <title>KGL Dashboard</title>
 </head>
 <body class="bg-light">
     <div class="container-fluid mt-2">
@@ -23,7 +23,11 @@
                             <li class="list-group-item"> <a href="/products.html">Products</a></li>
                             <li class="list-group-item">Payments</li>
                             <li class="list-group-item">Sales</li>
+                            <li class="list-group-item"><a href="/productdetails.html">Product Details</a></li>
+                            <li class="list-group-item">Product Information</li>
+                            <li class="list-group-item">Price</li>
                             <li class="list-group-item"><a href="/index.html">Logout</a></li
+                            
                         </ul>
                     </div>
                 </div>
@@ -47,7 +51,7 @@
                                 <h4>Users</h4>
                             </div>
                             <div class="card-body">
-                                <h1>5</h1>
+                                <h1>10</h1>
                             </div>
                         </div>
                     </div>
@@ -58,7 +62,7 @@
                                     <h4>Products</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1>5</h1>
+                                    <h1>6</h1>
                                 </div>
                             </div>
                         </a>
@@ -84,7 +88,7 @@
                                 <h4>Users</h4>
                             </div>
                             <div class="card-body">
-                                <h1>5</h1>
+                                <h1>7</h1>
                             </div>
                         </div>
                     </div>
@@ -128,6 +132,32 @@
                                         <td>Matugga</td>
                                         <td>Beans</td>
                                         <td>150,000</td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                            </div>
+                            <div class="card-body">
+                                <table class="table">
+                                    <thead>
+                                      <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Branch</th>
+                                        <th scope="col">Product</th>
+                                        <th scope="col">Prices (UGX)</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <th scope="row">1</th>
+                                        <td>Maganje</td>
+                                        <td>Beans</td>
+                                        <td>80,000</td>
+                                      </tr>
+                                      <tr>
+                                        <th scope="row">2</th>
+                                        <td>Maganje</td>
+                                        <td>Maize</td>
+                                        <td>100,000</td>
                                       </tr>
                                     </tbody>
                                   </table>
