--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <div class="container" id="main">
         <div class="row">
             <div class="col-md-7 text-center">
-                <h1>Welcome to Karibu Groceries Limited</h1>
+                <h1>Karibu! Your Home Of Healthy Groceries</h1>
                 <p>
                     Karibu groceries LTD is a wholesale produce distributor dealing in cereals with 2 Branches in
-different locations. Over time all operations have been recorded in ruled black books. This has
-prompted the owner to seek for a software solution.
+different locations. At Karibu, we believe that healthy eating is the key to a vibrant life. That's why we're dedicated to providing you with the freshest, highest-quality products that nourish your body and soul. 
                 </p>
             </div>
 
