--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
                 <h1>Products</h1>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card"">
+                        <div class="card">
                             <img src="imgs/products/gnuts.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Gnuts - 7500UGX per kg</h5>
@@ -42,7 +42,7 @@
                           </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card"">
+                        <div class="card">
                             <img src="imgs/products/maize.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Maize</h5>
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card"">
+                        <div class="card">
                             <img src="imgs/products/beans.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Beans</h5>
